--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -101,4 +101,18 @@ canvas
   height: 80vh
   font-weight: normal
   border: 1px dashed #fff
+.review
+  border: 1px solid #fff
+  padding: 5px
+  margin-bottom: 10px
+  span
+    display: inline-block
+    border-bottom: 1px solid #fff
+    background-color: $green
+    padding: 0 5px
+  p
+    margin-top: 5px
+    font-style: italic
+  .customer
+    float: right
 
