--- a/views/customer.jade
+++ b/views/customer.jade
@@ -9,7 +9,7 @@ block content
     .container-fluid(ng-controller="TaskCtrl")
         .row
             include includes/notifications
-            .col-lg-6.col-md-6.col-sm-7
+            .col-lg-6.col-md-6.col-sm-7.col-lg-offset-3.col-md-offset-3
                 include includes/customer_menu
                 .row
                     #owl-carousel
