--- a/views/executer.jade
+++ b/views/executer.jade
@@ -6,7 +6,7 @@ block content
     .container-fluid(ng-controller="TaskCtrl",  ng-init="getTasks(1);")
         .row
             include includes/notifications
-            .col-lg-6.col-md-6.col-sm-7
+            .col-lg-6.col-md-6.col-sm-7.col-lg-offset-3.col-md-offset-3
                 include includes/executer_menu
                 .row
                     p Всего заданий: {{tasks.length}}
