--- a/views/main.jade
+++ b/views/main.jade
@@ -14,7 +14,7 @@ block content
     .container-fluid(ng-controller="PortfolioCtrl",ng-init="user= #{JSON.stringify(user_info)}; works= #{JSON.stringify(works)}")
         .row
             include includes/notifications
-            .col-lg-6.col-md-6.col-sm-7
+            .col-lg-6.col-md-6.col-sm-7.col-lg-offset-3.col-md-offset-3
                 ul.nav.nav-tabs(id="tabs")
                     li.active
                         a(href='#profile',data-toggle="tab") Профиль
