--- a/views/own_requests.jade
+++ b/views/own_requests.jade
@@ -7,7 +7,7 @@ block content
     .container-fluid(ng-controller="RequestCtrl")
         .row
             include includes/notifications
-            .col-lg-6.col-md-6.col-sm-7
+            .col-lg-6.col-md-6.col-sm-7.col-lg-offset-3.col-md-offset-3
                 include includes/executer_menu
                 .row(ng-controller="Chat as chat")
                     p.request_status Поиск исполнителей
