--- a/views/view_result.jade
+++ b/views/view_result.jade
@@ -8,7 +8,7 @@ block content
     .container-fluid
         .row
             include includes/notifications
-            .col-lg-6.col-md-6.col-sm-7
+            .col-lg-6.col-md-6.col-sm-7.col-lg-offset-3.col-md-offset-3
                 .row
                     p Прикрепите необходимые файлы
                     .div(ng-controller="RequestCtrl",ng-init="task= #{JSON.stringify(task)}")
