--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -115,4 +115,10 @@ canvas
     font-style: italic
   .customer
     float: right
+.dateFilter
+  display: block
+  a
+    margin-right: 15px
+    &:last-child
+      margin-right: 0
 
