--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -30,15 +30,17 @@
   margin-bottom: 10px
 .authors
   padding: 0
+  button,a
+    float: right
+  button
+    margin-top:  5px
   .author
     width: 100%
-    height: auto
     border-top: none
-    line-height: 30px
     cursor: pointer
-    position: relative
     padding-left: 10px
     display: inline-block
+    line-height: 30px
     background-color: $bgclight
     border-bottom: 1px solid black
     color: #fff
