--- a/views/includes/comment.jade
+++ b/views/includes/comment.jade
@@ -14,6 +14,6 @@
                     | Нейтральная
                     input(type="radio",name="mark",value="2", ng-model="result.mark")
                     | Отрицательная
-                    button.btn.btn-default(type="submit") Отправить
-            .modal-footer
-                button.btn.btn-default.no(type='button', data-dismiss='modal') Закрыть
+                    .modal-footer
+                        button.btn.btn-primary(type="submit") Отправить
+                        button.btn.btn-default.no(type='button', data-dismiss='modal') Закрыть
