--- a/views/own_requests.jade
+++ b/views/own_requests.jade
@@ -26,6 +26,7 @@ block content
                     div.request.clearfix(ng-repeat="request in own_requests.req_complete")
                         include includes/request/executer/request_complete
             include includes/top
+            include includes/dispute
 block additional_scripts
     script(src="/js/controllers/request.js")
 
