--- a/views/includes/chat.jade
+++ b/views/includes/chat.jade
@@ -1,4 +1,4 @@
 div.chat.col-lg-7
-    input.form-control(type="text",placeholder="Введите сообщение",ng-keypress="add($event,{_id: '#{user._id}',name: '#{user.name}'},request.task._id)",ng-model="chat.mes")
+    input.form-control(type="text",placeholder="Введите сообщение",ng-keypress="add($event,{_id: '#{user._id}',name: '#{user.name}'},request.task._id)",ng-model="chat.mes[request.task._id]")
     div(message-list="{{request.task._id}}")
     br
