--- a/views/includes/customer_menu.jade
+++ b/views/includes/customer_menu.jade
@@ -1,4 +1,4 @@
 ul.customer_menu
     li: a(href='/task/add') Создать задание
     li: a(href='/request/get') Заявки
-    li: a(href='/user/tasks/get') Мои задания
+    li: a(href='/task/my/get') Мои задания
