испралены баги чата

--- a/views/includes/notifications.jade
+++ b/views/includes/notifications.jade
@@ -2,5 +2,5 @@ style
     include ../../public/css/notify.css
 .col-lg-3.col-md-3.col-sm-5.col-xs-12.messages
     p Сообщения
-    .well.notifyies(ng-controller="Chat as chat",ng-init="subscribeExecuterTasks(); subscribeCustomersTasks(); getNotifications();")
+    .well.notifyies(ng-controller="Chat as chat",ng-init="subscribeAllMyExecuterTask(); subscribeAllMyCustomerTask(); getNotifications();")
         div(notification-list="notifications")
