--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,7 @@ html(lang="en",ng-app="app")
             script(src="/libs/bootstrap/bootstrap.js")
             script(src="/libs/sweetalert/dist/sweetalert.min.js")
             script(src="/libs/angular/angular.js")
+            script(src="http://cdn.socket.io/socket.io-1.1.0.js")
             script(src="/js/config.js")
             script(src="/js/app.js")
             script(src="/js/controllers/chat.js")
