--- a/views/main.jade
+++ b/views/main.jade
@@ -51,7 +51,7 @@ block content
                             input.form-control(type="file",name="files",multiple)
                             button.btn.btn-sm.btn-default(type="submit") Добавить
                         .row
-                            .col-lg-4(ng-repeat="work in works")
+                            .col-lg-4.col-md-4.col-sm-4(ng-repeat="work in works")
                                 include includes/folder
                     .well.tab-pane.fade(id="stats")
                         p Оценки:
